--- a/src/app/features/lms/grp/components/quotation/components/stepper/stepper.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/stepper/stepper.component.html
@@ -2,21 +2,21 @@
   <div class="col-xs-12 col-sm-4 col-md-4 text-center">
     <a routerLink="/home/lms/grp/quotation/quick">
       <div class="circle" [ngClass]="{'active': isStepActive('quick')}">1</div>
-      <div class="text">Product details</div>
+      <div class="text">Product Details</div>
     </a>
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-4 text-center">
     <a routerLink="/home/lms/grp/quotation/coverage">
       <div class="circle" [ngClass]="{'active': isStepActive('coverage')}">2</div>
-      <div class="text">Coverage details</div>
+      <div class="text">Coverage Details</div>
     </a>
   </div>
 
   <div class="col-xs-12 col-sm-4 col-md-4 text-center">
     <a routerLink="/home/lms/grp/quotation/summary">
       <div class="circle" [ngClass]="{'active': isStepActive('summary')}">3</div>
-      <div class="text">Summary details</div>
+      <div class="text">Summary Details</div>
     </a>
   </div>
 </div>
