VQ-755: bug fixes

--- a/src/app/features/reports-v2/report-management/report-management.component.css
+++ b/src/app/features/reports-v2/report-management/report-management.component.css
@@ -20,3 +20,8 @@ ul.dropdown-menu li:hover {
     margin: auto;
     vertical-align: middle;
 }
+
+.p-datatable-tbody tr td,
+p-table tr > th {
+    font-size: 1rem!important;
+}
