--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -55,7 +55,7 @@
                         <td>{{ report.createdDate | date }}</td>
                         <td>
                             <div class="btn-group dropend">
-                                <a class="btn btn-link text-dark" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="btn btn-link text-dark text-start" data-bs-toggle="dropdown" aria-expanded="false">
                                     {{ getDashboardName(report.dashboardId) }}
                                 </a>
                                 <ul class="dropdown-menu">
