--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -36,8 +36,8 @@
                         <td>{{ report.id }}</td>
                         <td>{{ report.name }}</td>
                         <td>
-                            <!-- <ng-container *ngIf="getUserName(report.createdBy) | async as userName">
-                                {{ userName?.name }}
+                            <!-- <ng-container *ngIf="getUserName(report.createdBy) | async as user">
+                                {{ user?.name }}
                             </ng-container> -->
                             {{ report.createdBy }}
                         </td>
@@ -79,12 +79,13 @@
                                     <li
                                     data-bs-toggle="modal"
                                     data-bs-target="#saveReportModal"
+                                    id="selectReport"
                                     (click)="selectReport(report)"
                                   >
                                     Rename
                                 </li>
-                                  <li>Share</li>
-                                  <li>Download</li>
+                                  <li data-bs-toggle="modal" data-bs-target="#shareModal">Share</li>
+                                  <li data-bs-toggle="modal" data-bs-target="#downloadModal">Download</li>
                                   <li 
                                     data-bs-toggle="modal"
                                     data-bs-target="#deleteReportModal"
@@ -135,9 +136,19 @@
 
         <div class="modal-body">        
             <button class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
-            <button class="btn btn-danger float-end" (click)="deleteReport(selectedReport?.id)">Confirm Delete</button>
+            <button 
+                class="btn btn-danger float-end"
+                id="deleteReport"
+                (click)="deleteReport(selectedReport?.id)"
+                data-bs-dismiss="modal" 
+                aria-label="Close"
+            >
+                Confirm Delete
+            </button>
         </div>
       </div>
     </div>
   </div>
-  
+
+  <app-share-modal></app-share-modal>
+  <app-download-modal></app-download-modal>
