--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -4,7 +4,7 @@
      <div class="container mx-2 mt-n1">     
         <div class="card mb-3">
             <div class="card-body">
-                <p class="title ms-4"> Comprehensive</p>
+                <p class="title ms-4"> {{coverTypeShortDescription}}</p>
                 <div class="row ms-3">
                     <div class="col-4">
                         <p class="title2"> Basic Premium</p>
@@ -14,22 +14,42 @@
                                 <p class="details-label">Value of vehicle</p>
                             </div>
                             <div class="col-6">
-                                <p class="details-label">2,000,000</p>
+                                <p class="details-label">{{sumInsuredValue | number}}</p>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-6">
                                 <p class="details-label">Premium</p>
                             </div>
                             <div class="col-6">
                                 <p class="details-label">100,000</p>
                             </div>
-                        </div>
+                        </div> -->
+                        <div class="row">
+                            <div class="col-6">
+                              <p class="details-label">Premium</p>
+                            </div>
+                            <div class="col-6">
+                              <p class="details-label">{{ premium | number }}</p>
+                            </div>
+                          </div>
+                          
                     </div>
                     <div class="col-4">
                         <p class="title2"> Levies and taxes (KES)</p>
                          <!-- ROW 2 -->
-                         <div class="row">
+                         <div *ngFor="let tax of taxInformation">
+                            <div class="row">
+                              <div class="col-6">
+                                <p class="details-label">{{ tax.description }}</p>
+                              </div>
+                              <div class="col-6">
+                                <p class="details-label">{{ tax.amount }}</p>
+                              </div>
+                            </div>
+                          </div>
+                          
+                         <!-- <div class="row">
                             <div class="col-6">
                                 <p class="details-label">Policyholders fund</p>
                             </div>
@@ -52,11 +72,11 @@
                             <div class="col-6">
                                 <p class="details-label">40</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-4 ">
                         <p class="title2">Total payable premium</p>
-                        <p class="payable-premium ms-4">100,490</p>
+                        <p class="payable-premium ms-4">{{ calculateTotal() | number }}</p>
                     </div>
                 </div>
                 <div class="float-end mb-4 me-4 " *ngIf="!isCollapsibleOpen">
@@ -102,20 +122,23 @@
                 </div> -->
                 <!-- Add More Benefits Modal -->
                 <div class="modal fade" id="addMoreBenefits" tabindex="-1" aria-labelledby="addMoreBenefitsLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-dialog modal-dialog-centered" style="min-width: 608px;">
                       <div class="modal-content ps-4 pt-4 pe-4">
                           <p class="modal-title mb-3" id="addMoreBenefitsLabel">Additional benefit details</p>
-                          <p-table [value]="" >
+                          <p-table [value]="quickQuoteSectionList" [customSort]="true"  id="clientTable" selectionMode="single" [resizableColumns]="true"
+                          styleClass="p-datatable-sm" responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true"
+                          [paginator]="true" [rows]="10" [scrollable]="true" scrollDirection="horizontal"
+                          [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}">
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th style="width: 33%;">Benefit</th>
+                                    <th style="width: 33%;">BoscoBenefit</th>
                                     <th style="width: 33%;">Limit</th>
                                     <th style="width: 33%;">Value</th>
                                 </tr>
                             </ng-template>
-                            <ng-template pTemplate="body" >
+                            <ng-template pTemplate="body" let-quickQuoteSectionList >
                                 <tr>
-                                    <td></td>
+                                    <td>{{quickQuoteSectionList.sectionShortDescription}}</td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -129,6 +152,7 @@
                 
                               </ng-template>
                         </p-table>
+                       
                         <div class="row mt-3 mb-3">
                             <div class="col-6">
                                 <button type="button" data-bs-dismiss="modal" class="btn btn-link"> Back</button>
@@ -406,23 +430,23 @@
                     </div>
                 </div> -->
                 <!-- Add More Benefits Modal -->
-                <div class="modal fade" id="addMoreBenefits" tabindex="-1" aria-labelledby="addMoreBenefitsLabel" aria-hidden="true">
+                <!-- <div class="modal fade" id="" tabindex="-1" aria-labelledby="addMoreBenefitsLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content ps-4 pt-4 pe-4">
                           <p class="modal-title mb-3" id="addMoreBenefitsLabel">Additional benefit details</p>
-                          <p-table [value]="" >
+                          <p-table [value]="quickQuoteSectionList" >
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th style="width: 33%;">Benefit</th>
+                                    <th style="width: 33%;">Bentttfit</th>
                                     <th style="width: 33%;">Limit</th>
                                     <th style="width: 33%;">Value</th>
                                 </tr>
                             </ng-template>
-                            <ng-template pTemplate="body" >
+                            <ng-template pTemplate="body" let-quickQuoteSectionList >
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>sum Insured</td>
+                                    <td>23455</td>
+                                    <td>34566</td>
                                 </tr>
                             </ng-template>
                             <ng-template pTemplate="emptymessage">
@@ -446,7 +470,7 @@
                        
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 <!-- Share Quote Modal -->
                 <div  class="modal fade"  id="shareQuote" tabindex="-1" aria-labelledby="shareQuote" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
@@ -711,14 +735,14 @@
                     </div>
                 </div> -->
                 <!-- Add More Benefits Modal -->
-                <div class="modal fade" id="addMoreBenefits" tabindex="-1" aria-labelledby="addMoreBenefitsLabel" aria-hidden="true">
+                <!-- <div class="modal fade" id="addMoreBenefits" tabindex="-1" aria-labelledby="addMoreBenefitsLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                       <div class="modal-content ps-4 pt-4 pe-4">
                           <p class="modal-title mb-3" id="addMoreBenefitsLabel">Additional benefit details</p>
                           <p-table [value]="" >
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th style="width: 33%;">Benefit</th>
+                                    <th style="width: 33%;">Benefiiiiiit</th>
                                     <th style="width: 33%;">Limit</th>
                                     <th style="width: 33%;">Value</th>
                                 </tr>
@@ -751,7 +775,7 @@
                        
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 <!-- Share Quote Modal -->
                 <div  class="modal fade"  id="shareQuote" tabindex="-1" aria-labelledby="shareQuote" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
