--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -4,11 +4,17 @@
     <div class="container mx-2 mt-n1">
         <div class="card mb-3">
             <div class="card-body">
-                <form class="mb-3">
+                
                     <div *ngIf="!new">
                         <input class="form-check-input me-2 mt-2" (click)="toggleButton()" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                         <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1">
                           Existing Client
+                        </label>
+                    </div>
+                    <div *ngIf="new">
+                        <input class="form-check-input me-2 mt-2" (click)="toggleNewClient()" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1">
+                          New Client
                         </label>
                     </div>
         
@@ -16,77 +22,127 @@
                     <div class="row mb-4">
                         <div class="col-4" *ngIf="!new">
                             <label for="minmax-buttons" class="required" id="quote-label">Name</label>
-                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">                            
+                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1" [(ngModel)]="clientName">                            
                         </div>
                         <div class="col-4" *ngIf="new">
                             <label for="minmax-buttons" class="required" id="quote-label">Client</label>
-                            <input type="text" id="quote-input"  class="form-control form-control-sm mb-1" data-bs-toggle="modal" data-bs-target="#clientModal" formControlName="">                            
+                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1"  data-bs-toggle="modal" data-bs-target="#clientModal" [(ngModel)]="clientName" autocomplete="off">                                                    
                         </div>
                         <div class="col-4 ">
                             <label for="minmax-buttons" id="quote-label">Email Address</label>
-                            <input type="number" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
+                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1" [(ngModel)]="clientEmail">     
                         </div>
                         <div class="col-4">
                             <label for="minmax-buttons" id="quote-label">Phone Number</label>
-                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
+                            <!-- <input type="text" id="quote-input" class="form-control form-control-sm mb-1" [(ngModel)]="clientPhone">      -->
+                            <div class="input-group">
+                                <select id="zipDropdown">
+                                    <option *ngFor="let mobile of filteredCountry" [value]="mobile.code">{{ mobile.mobilePrefix }}</option>
+                                </select>
+                                <input type="text" id="zip-quote-input" class="form-control form-control-sm mb-1" [(ngModel)]="clientPhone">
+                            </div>
+                              
+                              
+                                                              
+
                         </div>
+                        
+                          
                     </div>
+                    
+                    
+                    <form [formGroup]="personalDetailsForm" class="mb-3">
+
                      <!-- ROW 2 -->
                      <div class="row mb-4">
                         <div class="col-4">
-                            <label for="minmax-buttons" id="quote-label">Source</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
+                            <label class="required" for="minmax-buttons" id="quote-label">Source</label>
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="source">
                                 <option value=""></option>
                                 <option *ngFor="let source of sourceDetail" [value]="source.code">{{ source.description }}</option>
                             </select>              
                         </div>
                         <div class="col-4">
+                            <label for="minmax-buttons" id="quote-label">Branch</label>
+                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="branchCode" [(ngModel)]="userBranchId">     
+
+                            <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="branchCode" >
+                                <option value=""></option>
+                                <option ></option>
+                            </select>    -->
+                        </div>
+                        <div class="col-4">
                             <label for="minmax-buttons" id="quote-label">Product</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="" (change)="onProductSelected($event)">
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="productCode" (change)="onProductSelected($event)">
                                 <option value=""></option>
                                 <option *ngFor="let product of productList" [value]="product.code">{{ product.description }}</option>
                             </select>   
                         </div>
-                        <div class="col-4">
-                            <label for="minmax-buttons" id="quote-label">Use of property</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
-                                <option ></option>
-                                <option ></option>
-                            </select>    
-                        </div>
+                       
                     </div>
                      <!-- ROW 3 -->
-                     <div class="row">
+                     <div class="row mb-4">
                         <div class="col-4">
-                            <label for="minmax-buttons" id="quote-label">Binder</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="binder-dropdown" formControlName="">
-                                <option value=""></option>
-                                <option *ngFor="let binder of selectedBinderList" [value]="binder.code">{{ binder.binder_short_description }}</option>
-                            </select>                
+                            <label for="minmax-buttons" id="quote-label">Use of property</label>
+                            <select class="form-select form-control-sm" id="quote-input" (change)="onSubclassSelected($event)" >
+                                <option *ngFor="let subclass of allMatchingSubclasses" [value]="subclass.code">{{subclass.description}}</option>
+                            </select>
                         </div>
                         <div class="col-4">
-                            <label for="minmax-buttons" id="quote-label">Cover Period</label>
-                            <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="">     
+                            <label for="minmax-buttons" id="quote-label">Binder</label>
+                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="bindCode" (change)="onSelectBinder($event)">
+                                
+                                <option *ngFor="let binder of binderListDetails" [value]="binder.code">{{ binder.binder_short_description }}</option>
+                            </select>                
+                        </div>
+                        <div class="col-xl-4">
+                            <label for="" id="quote-label">Cover From</label>
+                            <!-- <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveFromDate"> -->
+                            <input type="date" id="cover-from" class="form-control form-control-sm mb-1" formControlName="withEffectiveFromDate" [(ngModel)]="coverFromDate" (ngModelChange)="updateCoverToDate()">
+
+                        </div>
+                       
+                       
+                    </div>
+                    <!-- ROW 4 -->
+                     <div class="row mb-4">
+                        <div class="col-4">
+                            <label for=""id="quote-label">Cover To</label>
+                            <!-- <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveToDate">     -->
+                            <input type="date" id="cover-to" class="form-control form-control-sm mb-1" formControlName="withEffectiveToDate" [(ngModel)]="coverToDate">
+
+                            <!-- <br>
+                            <p-calendar
+                            selectionMode="range"
+                            [readonlyInput]="true"
+                            formControlName="dateRange"
+                            dateFormat="dd.mm.yy"
+                            (click)="showSelectFromDateMessage()"
+                            (onSelect)="showSelectToDateMessage()"
+                          ></p-calendar> -->
+                          
+
                         </div>
                         <div class="col-4">
                             <label for="minmax-buttons" class="required" id="quote-label">Currency</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="">
-                                <option value=""></option>
-                                <option *ngFor="let currency of currencyList" [value]="currency.id">{{ currency.symbol }}</option>
-                            </select>                 
+                            <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="quote-input" formControlName="currencyCode">
+                                <option  [value]="currencyCode" >{{selectedCurrency}}</option>
+                            </select>  -->
+                            <input class="form-control form-control-sm mb-1 ms-n4" id="quote-input" formControlName="currencyCode" [value]="selectedCurrency" readonly>
                         </div>
-                    </div>
+                        
+                     </div>
                     
-                     <!-- ROW 4 -->
+                     <!-- ROW 5 -->
                     <div *ngIf="formData && selectedProductCode" class="row">
-                        <div class="col-12 mt-4">
-                            <p id="productSpecificLabel">Product Specific Form Fields</p>
+                        <div class="col-12 ">
+                            <!-- <p id="productSpecificLabel">Product Specific Form Fields</p> -->
                             <div class="row">
-                                <div class="col-4">
+                                <div class="col-4" *ngFor="let field of formData" >
                                     <form [formGroup]="dynamicForm">
-                                        <div *ngFor="let field of formData">
-                                            <label id="quote-label" [for]="field.name">{{ field.label }}</label>
-                                            <input [type]="field.type" [formControlName]="field.name" id="quote-input" class="form-control form-control-sm mb-1">
+                                        <div >
+                                            <label id="quote-label" [for]="field.name" >{{ field.label }}</label>
+                                            <input [type]="field.type" [formControlName]="field.name" id="quote-input" class="form-control form-control-sm mb-1 col-md-8">
                                         </div>
                                     </form>
                                 </div>
@@ -102,27 +158,66 @@
                                 
                                 <div class="modal-body">
                                     <button type="button" class="float-end btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    <p class="text-start mb-3 text-primary">Select Client</p>
+                                    <p class="text-start" id="selectClient">Select Client</p>
                                    
-                                        <div class="row mb-3" id="quote-label">
-                                            <div class="col-xl-4">Select</div>
-                                            <div class="col-xl-4">ID</div>
-                                            <div class="col-xl-4">Name</div>
-                                        </div>
-                                        <div *ngFor="let data of clientData" class="mb-3">
-                                            <div class="row">
-                                            <div class="col-xl-4">
-                                                <input class="form-check-input me-2 mt-2" (click)="loadClientDetails(data.id)" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                                            </div>  
-                                           <div class="col-xl-4 "><p id="clientDetails">{{data.id}}</p></div>
-                                           <div class="col-xl-4"><p id="clientDetails">{{data.firstName+" "+data.lastName}}</p></div>
-                                            
+                                    <p-table 
+                                    #dt1 [value]="clientData" 
+                                    [tableStyle]="{'max-width': '465px'}"
+                                    selectionMode="single" 
+                                    [resizableColumns]="true"
+                                    styleClass="p-datatable-sm" responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true"
+                                      [paginator]="true" [rows]="5" [scrollable]="true" scrollDirection="horizontal"
+                                      [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}"
+                                      [globalFilterFields]="['idNumber', 'emailAddress','lastName','emailAddress']"
+                                      >
+                                      <ng-template pTemplate="caption">
+                                        
+                                               <div class="flex">
+                                                <span class="p-input-icon-left ml-auto">
+                                                    <i class="pi pi-search search-icon"></i>
+                                                    <input class="search-input" pInputText type="text" (input)="applyFilterGlobal($event, 'contains')" placeholder="Search" />
+                                                </span>
                                             </div>
-                                            
-                                        </div>
-                                        <div></div>
-                                        <button class="btn btn-primary float-end" data-bs-dismiss="modal">Save Details</button>
+                                             
+                                         
+                                      </ng-template>
+                                      <ng-template pTemplate="header">
+                                       
+                                        <tr id="product">
+                                          <th >Id no</th>
+                                          <th >Name</th>
+                                          <th >Email</th>
+
+                                        </tr>
+                                      </ng-template>
+                    
+                                      <ng-template let-clientData pTemplate="body">
+                                        <tr id="productData" [pSelectableRow]="" 
+                                        (click)="loadClientDetails(clientData.id)">
+                                         
+                                          <td >
+                                            {{clientData.idNumber}}
+                                          </td>
+                                          <td >
+                                            {{clientData.firstName+" "+clientData.lastName}}
+                                          </td>
+                                          <td>
+                                            {{clientData.emailAddress}}
+                                          </td>
+                                        </tr>
+                                      </ng-template>
+                                      <ng-template pTemplate="paginatorleft">
+                                        <p-button type="button"  styleClass="p-button-text"></p-button>
+                                      </ng-template>
+                                      <ng-template pTemplate="paginatorright">
+                                        <p-button type="button" styleClass="p-button-text"></p-button>
+                                      </ng-template>
+                                    </p-table>
+<br>
+                                        <button class="btn btn-primary float-end" data-bs-dismiss="modal" (click)="saveclient()">Save Details</button>
                                 </div>
+                                
+                                  
                                
                             </div>
                             </div>
@@ -134,7 +229,8 @@
         </div>
         <div class="row ">
             <div class="col-6"></div>
-            <div class="col-6 d-flex justify-content-end"><button type="button" class="btn btn-outline-primary"  id="compute" >Compute</button>
+            <div class="col-6 d-flex justify-content-end">
+                <button type="button" class="btn btn-outline-primary"  id="compute" (click)="createQuotation();" >Compute</button>
             </div>
         </div>
     </div>
