--- a/src/app/features/gis/components/setups/components/premium-rate/premium-rate/premium-rate.component.html
+++ b/src/app/features/gis/components/setups/components/premium-rate/premium-rate/premium-rate.component.html
@@ -1,21 +1,6 @@
 <div class="row mx-3 my-2">
-    <!-- <div class="row mt-4">
-        <div class="col-6">
-          <app-dynamic-breadcrumb [breadCrumbItems]="premiumBreadCrumbItems"></app-dynamic-breadcrumb>
-        </div>
-        <div class="col-6 d-flex justify-content-end">
-          <p class="text-right" style="color:#00529B;"><a>Help <i class="pi pi-question-circle"></i></a></p>
-        </div>
-      
-      </div> -->
 <div class="row">
     <div class="col-6">
-        <!-- <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Premium Rates</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Binders</li>
-            </ol>
-          </nav> -->
           <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Premium Rates</a></li>
@@ -29,6 +14,7 @@
 </div>
 <div class="row">
 <div class="col-xl-3">
+    <!-- subclass list -->
         <div class="card" id="subclass">
             <div class="card-body">
                 <p class="card-title mb-3 mt-1">Sub Class Perils</p>
@@ -62,6 +48,7 @@
             </div>
         </div>
         <br>
+        <!-- section list -->
         <div class="card" id="section">
             <div class="card-body">
                 <p class="card-title mb-3">Section</p>
@@ -96,10 +83,12 @@
         <div class="card">
             <div class="card-body">
                 <ul class="nav nav-pills mt-2" id="pills-tab" role="tablist">
+                            <!-- Binder Tab-->
                     <li class="nav-item">
                       <a class="nav-link active me-3" id="pills-Binders-tab" data-bs-toggle="pill"
                         href="#pills-Binders" role="tab" aria-controls="pills-Binders" aria-selected="true">Binders</a>
                     </li>
+                            <!-- Premium Rates Tab-->
                     <li class="nav-item">
                       <a class="nav-link" id="pills-PremiumRates-tab" data-bs-toggle="pill" href="#pills-PremiumRates"
                         role="tab" aria-controls="pills-PremiumRates" aria-selected="false">Premium Rates</a>
@@ -121,7 +110,8 @@
                     <div class="tab-pane fade show active" id="pills-Binders" role="tabpanel" aria-labelledby="pills-Binders-tab">
                         <hr>
                         <div class="mt-3">
-                            <p-table [value]="selectedBinderList"  [customSort]="true" [tableStyle]="{'max-width': '60rem'}" id="binderTable" selectionMode="single" [resizableColumns]="true"
+                            <!-- BINDER TABLE -->
+                            <p-table [value]="binderListDetails"  [customSort]="true" [tableStyle]="{'max-width': '60rem'}" id="binderTable" selectionMode="single" [resizableColumns]="true"
                             styleClass="p-datatable-sm" responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true"
                             [paginator]="true" [rows]="10" [scrollable]="true" scrollDirection="horizontal"
                             [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}"  [customSort]="true" >
@@ -161,7 +151,7 @@
 
                               </li>
                           </ul>
-
+                          <!-- Add Premium Modal -->
                           <div class="collapse" id="addCover" [ngClass]="{ 'show': showAddPremium }">
                             <div class="card card-body mt-n2 border-0">
                                 <p class="modal-title mb-2" id="AddChargesTitle">
@@ -443,6 +433,7 @@
                               </form>
                             </div>
                           </div>
+                           <!-- Edit Premium Modal -->
                           <div class="collapse" id="editCover" [ngClass]="{ 'show': showEditPremium }">
                             <div class="card card-body mt-n2 border-0">
                                 <p class="modal-title  mb-2" id="AddChargesTitle">
@@ -726,6 +717,7 @@
                              
                             </div>
                           </div>
+                          <!-- Delete Premium Modal -->
                           <div class="modal fade" id="deletePremium" tabindex="-1" role="dialog" aria-labelledby="deletePremium" aria-hidden="true">
                             <div class="modal-dialog  modal-sm" role="document">
                               <div class="modal-content" id="DeletePremium">
@@ -745,6 +737,7 @@
                               </div>
                             </div>
                         </div>
+                        <!-- Show Premium Modal -->
                         <div class="modal fade" id="showPremium" tabindex="-1" role="dialog" aria-labelledby="showPremium" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                               <div class="modal-content" id="showPremium">
@@ -881,6 +874,8 @@
                               </div>
                             </div>
                         </div>
+                        
+                        <!-- PREMIUM RATE TABLE -->
                         <div class="mt-3" *ngIf="!showAddPremium && !showEditPremium">
                             <p-table [value]="selectedPremuimList"  [customSort]="true" [tableStyle]="{'max-width': '60rem'}" id="binderTable" selectionMode="single" [resizableColumns]="true"
                             styleClass="p-datatable-sm" responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true"
@@ -911,12 +906,7 @@
                                         <td>{{selectedPremuimList.minimumRate}}</td>
                                     </tr>
                                 </ng-template>
-                                <!-- <ng-template pTemplate="paginatorleft">
-                                    <p-button type="button" icon="pi pi-plus" styleClass="p-button-text"></p-button>
-                                </ng-template>
-                                <ng-template pTemplate="paginatorright">
-                                    <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
-                                </ng-template> -->
+                               
                             </p-table>
                         </div>
                     </div>
